--- a/Create_protokol/app/src/main/AndroidManifest.xml
+++ b/Create_protokol/app/src/main/AndroidManifest.xml
@@ -33,6 +33,13 @@
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
+        <activity android:name=".InsulationActivity2">
+            <intent-filter>
+                <action android:name="android.intent.action.Insulation2" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
